# rust-client

./: .gitignore  Cargo.toml  README.md
src/: get.rs  lib.rs  main.rs  post.rs  structs.rs
