[package]
name = "milvue_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"]} 
dicom = "0.5.4"
dicom-object = "0.5.4"
http = "0.2.9"
multer = { version = "2.1.0", features = ["tokio-io"] }
reqwest = { version = "0.11.17", features = ["multipart", "json"] }
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
